fix(work-experience): adjust gap in profile section and remove unnecessary whitespace

--- a/src/sass/components/_work-experience.scss
+++ b/src/sass/components/_work-experience.scss
@@ -11,7 +11,6 @@
     grid-template-columns: 38% auto;
     gap: 2rem;
   }
-  
 
   @media (width <= 640px) {
     grid-template-columns: none;
@@ -29,9 +28,9 @@
 
   & .profile {
     display: grid;
-    gap: 1rem;
+    gap: 2rem;
 
-    &__pic {
+    &-pic {
       background:
         linear-gradient(to bottom, rgba(0, 0, 0, 0) 60%, rgb(0, 0, 0) 100%),
         url("/assets/makenedev-profile.jpeg");
